2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/DeleteActions.cs: Add DeleteSelection.

	* Mono.TextEditor.Vi/ViMode.cs: Implement >{motion}, <{motion}, >>, <<
	for normal mode, and and c d > < for visual mode.

2008-10-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement A I c C x X D.

2008-10-13  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: fixed 'Bug 434248 - Need to refresh
	texteditor after removing folded code'.

2008-10-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Don't use vi mode on default
	constructor.

	* Makefile.am:
	* Mono.TextEditor.mdp: Updated.

	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor.Vi/ViActions.cs:
	* Mono.TextEditor.Vi/ViActionMaps.cs: Move vi code to new namespace.
	Move action lookup out of the way. Implement 'o' and 'O', and
	:{number}. Unbreak 'c' key and ':' commands by removing overzealous
	modifier check.

	* Mono.TextEditor/ViMode.cs:
	* Mono.TextEditor/ViActions.cs: Moved.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViActions.cs: Fix { } behaviour.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Mono.TextEditor.mdp: Updated.

	* Mono.TextEditor/ViMode.cs:
	* Mono.TextEditor/ViActions.cs: Implemented { and }.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViMode.cs:
	* Mono.TextEditor/DeleteActions.cs: Implemented 'dd' and 'd{motion}' for
	simple motions.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViMode.cs: Refactor the dictionaries into switches to
	reduce overhead (also more readable for character commands). Split
	cursor and character navigation keys so that cursor keys can work in
	insert mode.

	* Mono.TextEditor/SelectionActions.cs: Add method for converting a
	movement action to a selection action.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>
