@@ -1,3 +1,8 @@
+2008-10-15  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
+	* Mono.TextEditor.Vi/ViMode.cs: Allow ex commands to apply to visual mode,
+	add :s command.
+
 2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.TextEditor/DeleteActions.cs: Add DeleteSelection.
